<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner">

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        android:textColor="@color/gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView27"
        android:layout_below="@+id/textView27"
        android:layout_marginTop="5dp"
        android:text="서울 특별시 강남구 테헤란로"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address"
        android:layout_alignStart="@+id/address"
        android:layout_below="@+id/address"
        android:layout_marginTop="20dp"
        android:text="@string/address_detail"
        android:textColor="@color/gray"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/address_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView29"
        android:layout_alignStart="@+id/textView29"
        android:layout_below="@+id/textView29"
        android:layout_marginTop="10dp"
        android:hint="@string/address_detail_hint"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="30dp"
        android:textSize="18dp"
        android:textIsSelectable="false" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close"
        android:src="@drawable/ic_delete"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />
</RelativeLayout>