<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bridge4biz.laundry.cleanbasket_androidver2.activities.ReviewActivity">


    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/pickup_review_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/partnerImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/titleBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_profile" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/partnerImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/pickup_info"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/questionOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/pickup_question"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/star_1st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionOne"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/star_2st"
        android:src="@drawable/ic_star_fill" />

    <ImageView
        android:id="@+id/star_2st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionOne"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/star_3st"
        android:src="@drawable/ic_star_fill" />

    <ImageView
        android:id="@+id/star_3st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionOne"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_star_fill" />

    <ImageView
        android:id="@+id/star_4st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionOne"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/star_3st"
        android:src="@drawable/ic_star" />

    <ImageView
        android:id="@+id/star_5st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionOne"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/star_4st"
        android:src="@drawable/ic_star" />

    <TextView
        android:id="@+id/opinionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/star_1st"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/review_opinion"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/opinionEdit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/opinionText"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_gray" />

    <TextView
        android:id="@+id/mileageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opinionEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/review_mileage" />

    <Button
        android:id="@+id/complete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="평가 완료"
        android:textColor="@color/white"
        android:textSize="18sp"

        />

</RelativeLayout>
