<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/nice_pay"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView28"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/card_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView30"
        android:layout_alignRight="@+id/textView30"
        android:layout_below="@+id/textView30"
        android:layout_marginTop="20dp"
        android:text="@string/availabe_dates"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView31"
        android:layout_alignRight="@+id/textView31"
        android:layout_below="@+id/textView31"
        android:layout_marginTop="20dp"
        android:text="@string/birth"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView32"
        android:layout_alignStart="@+id/textView32"
        android:layout_below="@+id/textView32"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cardNum1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView30"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/textView30"
        android:layout_toRightOf="@+id/textView30"
        android:background="@drawable/edit_white_gray"
        android:ems="10"
        android:inputType="number"
        android:padding="2dp" />

    <EditText
        android:id="@+id/cardNum2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cardNum1"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/cardNum1"
        android:layout_toRightOf="@+id/cardNum1"
        android:background="@drawable/edit_white_gray"
        android:ems="10"
        android:inputType="number"
        android:padding="2dp" />

    <EditText
        android:id="@+id/cardNum3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cardNum2"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/cardNum2"
        android:layout_toRightOf="@+id/cardNum2"
        android:background="@drawable/edit_white_gray"
        android:ems="10"
        android:inputType="number"
        android:padding="2dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cardNum3"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/cardNum3"
        android:layout_toRightOf="@+id/cardNum3"
        android:background="@drawable/edit_white_gray"
        android:ems="10"
        android:inputType="number"
        android:padding="2dp" />

    <EditText
        android:id="@+id/month"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cardNum1"
        android:layout_alignStart="@+id/cardNum1"
        android:layout_alignTop="@+id/textView31"
        android:background="@drawable/edit_white_gray"
        android:ems="10"
        android:gravity="center"
        android:hint="MM"
        android:inputType="number"
        android:padding="2dp" />

    <EditText
        android:id="@+id/year"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/month"
        android:layout_toEndOf="@+id/cardNum1"
        android:layout_toRightOf="@+id/cardNum1"
        android:background="@drawable/edit_white_gray"
        android:ems="10"
        android:gravity="center"
        android:hint="YY"
        android:inputType="number"
        android:padding="2dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/birth"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/month"
        android:layout_alignStart="@+id/month"
        android:layout_alignTop="@+id/textView32"
        android:background="@drawable/edit_white_gray"
        android:ems="10"
        android:gravity="center"
        android:hint="850822"
        android:inputType="number" />

    <EditText
        android:id="@+id/password"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/birth"
        android:layout_alignStart="@+id/birth"
        android:layout_alignTop="@+id/textView33"
        android:background="@drawable/edit_white_gray"
        android:ems="10"
        android:gravity="center"
        android:inputType="number" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:layout_below="@id/password"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/add_card"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</RelativeLayout>